--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 qt_standard_project_setup()
 
 if(BUILD_PLUGIN)
-    add_subdirectory(styleplugin)
+    #add_subdirectory(styleplugin)
+    message(FATAL_ERROR "Not supported: building as a plugin.")
 endif()
 if(BUILD_LIBRARY)
     add_subdirectory(style)
