--- a/styleplugin/CMakeLists.txt
+++ b/styleplugin/CMakeLists.txt
@@ -4,7 +4,11 @@ qt_add_library(QWin11PhantomStylePlugin SHARED
 )
 
 set_target_properties(QWin11PhantomStylePlugin PROPERTIES OUTPUT_NAME qwin11phantomstyle)
-target_include_directories(QWin11PhantomStylePlugin PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(QWin11PhantomStylePlugin
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
 target_compile_definitions(QWin11PhantomStylePlugin QT_DEPRECATED_WARNINGS)
 target_link_libraries(QWin11PhantomStylePlugin PRIVATE
     Qt::Core
