--- a/style/CMakeLists.txt
+++ b/style/CMakeLists.txt
@@ -1,10 +1,20 @@
-qt_add_library(QWin11PhantomStyle STATIC
-    qwin11phantomcolor.cpp
-    qwin11phantomstyle.cpp
-    qwin11phantomcolor.h
-    qwin11phantomstyle.h
-    qwin11phantomtweak.h
-)
+if(Qt6_FOUND)
+    qt_add_library(QWin11PhantomStyle STATIC
+        qwin11phantomcolor.cpp
+        qwin11phantomstyle.cpp
+        qwin11phantomcolor.h
+        qwin11phantomstyle.h
+        qwin11phantomtweak.h
+    )
+else()
+    add_library(QWin11PhantomStyle STATIC
+        qwin11phantomcolor.cpp
+        qwin11phantomstyle.cpp
+        qwin11phantomcolor.h
+        qwin11phantomstyle.h
+        qwin11phantomtweak.h
+    )
+endif()
 
 set_target_properties(QWin11PhantomStyle PROPERTIES OUTPUT_NAME qwin11phantomstyle)
 target_include_directories(QWin11PhantomStyle
